管理员路由

--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1,6 +1,6 @@
 .contain {
   margin: 0 auto;
-  width: 3.75rem;
+  width: 7.5rem;
 }
 a, .tap{
   -webkit-tap-highlight-color:transparent;
@@ -8,10 +8,6 @@ a, .tap{
 .imgbg{
   background-position: center;
   background-size: cover;
-}
-.spacing{
-  height: .08rem;
-  background: #eee;
 }
 .one-line{
   overflow: hidden;
@@ -33,5 +29,42 @@ a, .tap{
     bottom: 0;
     right: 0;
     margin: auto;
+  }
+}
+
+//后台管理系统
+.admin-login{
+  .logo{
+    padding: 1rem 0;
+    text-align: center;
+  }
+  .input-box{
+    width: 4rem;
+    margin: 0 auto;
+    li{
+      height: .88rem;
+      span{
+        font-size: .24rem;
+      }
+    }
+    input{
+      width: 3rem;
+      height: .6rem;
+      border: 1px solid #eee;
+      text-indent: .2rem;
+    }
+  }
+  .sub{
+    text-align: center;
+    padding: .8rem 0;
+    button{
+      width: 4rem;
+      line-height: .6rem;
+      border-radius: .5rem;
+      background: #ff8a00;
+      font-size: .28rem;
+      color: #fff;
+      border: none;
+    }
   }
 }
