--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -31,8 +31,242 @@ a, .tap{
     margin: auto;
   }
 }
-
+.index{
+  h2{
+    font-size: .46rem;
+    text-align: center;
+    line-height: .8rem;
+  }
+  ul{
+    display: flex;
+    padding: 0 .25rem;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    li{
+      width: 3.5rem;
+      box-sizing: border-box;
+      padding: .2rem;
+      img{
+        width: 100%;
+      }
+    }
+  }
+  @keyframes change{
+    0%{
+      transform: translate(0,0);  //平移
+    }
+    50%{
+      transform: translate(0, 10px);
+    }
+    100%{
+      transform: translate(0,0);
+    }
+  }
+  .go-order{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 1rem;
+    margin: auto;
+    width: 1.6rem;
+    height: 1.6rem;
+    border-radius: 50%;
+    background: #4caf50;
+    color: #fff;
+    font-size: .46rem;
+    text-align: center;
+    line-height: .6rem;
+    box-sizing: border-box;
+    padding: .2rem;
+    animation: change 2s infinite;
+    a{
+      display: block;
+      color: #fff;
+    }
+  }
+}
+.order{
+  .banner{
+    height: 2.3rem;
+    background-image: url("../../../static/img/order-banner.png");
+    background-size: cover;
+    h1{
+      font-size: .6rem;
+      line-height: .9rem;
+      padding: .7rem 1rem;
+      text-shadow: 3px 5px 8px #f00;
+    }
+  }
+  .order-list{
+    padding: .4rem 0;
+    ul{
+      display: flex;
+      padding: 0 .25rem;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
+      li{
+        width: 3rem;
+        box-sizing: border-box;
+        margin: .2rem;
+        position: relative;
+        overflow: hidden;
+        .imgbg{
+          display: block;
+          height: 3rem;
+          background-size: cover;
+          background-position: center;
+        }
+        .discount{
+          position: absolute;
+          top: -.3rem;
+          right: -.8rem;
+          width: 1.84rem;
+          height: .84rem;
+          line-height: .32rem;
+          padding-top: .5rem;
+          background: #f00;
+          color: #fff;
+          font-size: .3rem;
+          transform: rotate(45deg);
+          box-sizing: border-box;
+          text-align: center;
+        }
+        h4{
+          font-size: .3rem;
+          font-weight: 500;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+        .price{
+          color: #ff6b04;
+          font-size: .4rem;
+          span{
+            color: #999;
+            font-size: .26rem;
+            text-decoration: line-through;
+            margin-left: .16rem;
+          }
+        }
+        .add{
+          width: .6rem;
+          height: .6rem;
+          border-radius: 50%;
+          font-size: .4rem;
+          background: #ff6b04;
+          border: none;
+          line-height: .56rem;
+          color: #fff;
+          text-align: center;
+          margin-right: .1rem;
+        }
+      }
+    }
+  }
+  .state{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 7.5rem;
+    height: 1rem;
+    background: #fff;
+    z-index: 100;
+    border-top: 1px solid #eee;
+    .user{
+      padding-left: .1rem;
+      text-align: center;
+      img{
+        width: .6rem;
+        border-radius: 50%;
+        margin-bottom: -3px;
+      }
+      h2{
+        font-size: .24rem;
+        width: 2rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 2rem;
+      }
+    }
+    .content{
+      width: 3rem;
+      display: flex;
+      position: relative;
+      img{
+        width: .72rem;
+        height: .72rem;
+        margin-right: .2rem;
+      }
+      h5{
+        font-size: .46rem;
+        color: #f00;
+      }
+      span{
+        position: absolute;
+        top: 0;
+        left: .5rem;
+        display: block;
+        width: .4rem;
+        height: .4rem;
+        background: red;
+        color: #fff;
+        text-align: center;
+        line-height: .4rem;
+        border-radius: 50%;
+      }
+    }
+    button{
+      width: 1.8rem;
+      height: 1rem;
+      background: #ff9e5b;
+      color: #fff;
+      font-weight: 500;
+      font-size: .3rem;
+      border: none;
+    }
+  }
+}
 //后台管理系统
+.admin{
+  .header{
+    display: flex;
+    align-items: center;
+    padding: .2rem;
+    background: linear-gradient(to left, #ff876d, #ff5084);
+    img{
+      width: .8rem;
+      height: .8rem;
+      border-radius: 50%;
+    }
+    h5{
+      font-size: .32rem;
+      margin-left: .2rem;
+    }
+  }
+  .admin-body{
+    display: flex;
+    .side-bar{
+      width: .8rem;
+      height: 12rem;
+      border-right: 1px solid #eee;
+      text-align: center;
+      li{
+        border-bottom: 1px solid #eee;
+        padding: .1rem 0;
+        a{
+          color: #333;
+          font-size: .28rem;
+          p{
+            font-size: .24rem;
+          }
+        }
+      }
+    }
+  }
+}
 .admin-login{
   .logo{
     padding: 1rem 0;
