--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -31,6 +31,16 @@ a, .tap{
     margin: auto;
   }
 }
+.no-data{
+  text-align: center;
+  padding-top: 1rem;
+  img{
+    width: 3.2rem;
+  }
+  p{
+    font-size: .24rem;
+  }
+}
 .index{
   h2{
     font-size: .46rem;
@@ -165,6 +175,59 @@ a, .tap{
       }
     }
   }
+  .order-meng{
+    z-index: 80;
+    .meng-box{
+      bottom: 1rem;
+      top: auto;
+      height: 5.6rem;
+      background: #fff;
+      h2{
+        text-align: center;
+        line-height: .6rem;
+        background: #eee;
+        font-size: .28rem;
+        span{
+          padding: 0 .3rem;
+        }
+      }
+      ul{
+        height: 5rem;
+        overflow: auto;
+        li{
+          font-size: .28rem;
+          .item{
+            border-bottom: 1px solid #eee;
+            padding: 0 .3rem;
+            line-height: .8rem;
+            height: .8rem;
+          }
+          h5{
+            width: 3.2rem;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+          .price{
+            width: 1.2rem;
+            color: #f00;
+          }
+          .operation{
+            width: 1.26rem;
+            .do{
+              display: block;
+              width: .4rem;
+              height: .4rem;
+              border-radius: .2rem;
+              background: #ffc107;
+              text-align: center;
+              line-height: .34rem;
+            }
+          }
+        }
+      }
+    }
+  }
   .state{
     position: fixed;
     left: 0;
@@ -184,15 +247,15 @@ a, .tap{
       }
       h2{
         font-size: .24rem;
-        width: 2rem;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        max-width: 2rem;
+        max-width: 1.2rem;
+        color: #333;
       }
     }
     .content{
-      width: 3rem;
+      width: 4rem;
       display: flex;
       position: relative;
       img{
@@ -207,7 +270,7 @@ a, .tap{
       span{
         position: absolute;
         top: 0;
-        left: .5rem;
+        left: .4rem;
         display: block;
         width: .4rem;
         height: .4rem;
@@ -226,6 +289,79 @@ a, .tap{
       font-weight: 500;
       font-size: .3rem;
       border: none;
+    }
+  }
+}
+.commodity-detail{
+  .banner{
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    .back{
+      width: 7.5rem;
+      height: 4rem;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      filter: blur(15px);
+    }
+    img{
+      height: 4rem;
+      margin-bottom: -3px;
+    }
+  }
+  .info{
+    padding: .1rem .3rem;
+    border-bottom: 1px solid #eee;
+    h3{
+      font-size: .4rem;
+      font-weight: 500;
+    }
+    h5{
+      font-size: .36rem;
+      color: #f00;
+    }
+    p{
+      font-size: .24rem;
+      color: #666;
+    }
+    span{
+      font-size: .24rem;
+      color: #666;
+      margin-right: .2rem;
+    }
+  }
+  .evaluate{
+    padding: 0 .3rem;
+    h4{
+      font-size: .3rem;
+      padding-top: .2rem;
+    }
+    li{
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #eee;
+      padding: .2rem 0 .3rem 0;
+      .user-head{
+        width: .8rem;
+        height: .8rem;
+        border-radius: 50%;
+      }
+      .content{
+        width: 5.8rem;
+        h5{
+          font-size: .28rem;
+        }
+        span{
+          font-size: .24rem;
+          color: #999;
+        }
+        p{
+          font-size: .26rem;
+          color: #666;
+        }
+      }
     }
   }
 }
@@ -253,17 +389,72 @@ a, .tap{
       height: 12rem;
       border-right: 1px solid #eee;
       text-align: center;
+      box-sizing: border-box;
       li{
         border-bottom: 1px solid #eee;
-        padding: .1rem 0;
         a{
           color: #333;
           font-size: .28rem;
+          display: block;
+          padding: .1rem 0;
           p{
             font-size: .24rem;
           }
         }
+        .router-link-active{
+          background: #eee;
+        }
       }
+    }
+    .admin-content{
+      width: 6.5rem;
+      padding: .1rem;
+      h3{
+        font-size: .4rem;
+        text-align: center;
+        line-height: .8rem;
+        margin-right: 1rem;
+      }
+    }
+  }
+}
+.admin-add{
+  ul{
+    padding: 0 .6rem;
+    li{
+      padding-top: .2rem;
+      p{
+        font-size: .28rem;
+        line-height: .46rem;
+      }
+      input, select, textarea{
+        border: 1px solid #eee;
+        border-radius: .06rem;
+        width: 100%;
+        height: .5rem;
+        background: #fff;
+      }
+      input{
+        text-indent: .1rem;
+      }
+      textarea{
+        height: 2rem;
+        line-height: .4rem;
+        text-indent: .2rem;
+      }
+    }
+  }
+  .sub{
+    text-align: center;
+    padding: .6rem 1rem .6rem 0;
+    button{
+      width: 3rem;
+      height: .6rem;
+      border-radius: .1rem;
+      color: #fff;
+      font-size: .3rem;
+      background: #ff9e5b;
+      border: none;
     }
   }
 }
