--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -231,7 +231,9 @@ a, .tap{
   .state{
     position: fixed;
     left: 0;
+    right: 0;
     bottom: 0;
+    margin: auto;
     width: 7.5rem;
     height: 1rem;
     background: #fff;
