--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -104,8 +104,22 @@ a, .tap{
     h1{
       font-size: .6rem;
       line-height: .9rem;
-      padding: .7rem 1rem;
+      padding: .6rem 1rem 0 1rem;
       text-shadow: 3px 5px 8px #f00;
+    }
+    .store{
+      padding-left: 1rem;
+      display: flex;
+      align-items: center;
+      .iconfont{
+        font-size: .3rem;
+      }
+      select{
+        border: none;
+        height: .36rem;
+        line-height: .36rem;
+        background: transparent;
+      }
     }
   }
   .order-list{
@@ -294,6 +308,84 @@ a, .tap{
     }
   }
 }
+.my-order{
+  padding: .2rem .3rem;
+  li{
+    margin-bottom: .3rem;
+    box-shadow: 2px 5px 10px #ff8a00;
+    padding: .06rem .2rem .2rem .2rem;
+    a{
+      color: #000;
+    }
+  }
+  .store{
+    height: .6rem;
+    border-bottom: 1px solid #eee;
+    img{
+      width: .4rem;
+      margin-right: .1rem;
+    }
+  }
+  .info{
+    padding-top: .1rem;
+  }
+  .operate{
+    text-align: right;
+    padding-top: .08rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    button, a{
+      display: block;
+      margin-left: .1rem;
+      width: 1.2rem;
+      text-align: center;
+      line-height: .4rem;
+      border: none;
+      background: #ff8a00;
+      border-radius: .3rem;
+      color: #fff;
+      font-size: .24rem;
+    }
+  }
+}
+.order-detail{
+  .padding{
+    padding: .4rem .3rem;
+  }
+  .store{
+    text-align: center;
+    font-size: .26rem;
+  }
+  .state{
+    padding: .1rem 0;
+    font-size: .3rem;
+    text-align: center;
+  }
+  .list{
+    li{
+      margin-bottom: .2rem;
+    }
+    .imgbg{
+      width: .6rem;
+      height: .6rem;
+    }
+    h5{
+      width: 3rem;
+    }
+    span{
+      display: block;
+      width: .6rem;
+    }
+    .price{
+      width: 1.2rem;
+      color: #f00;
+    }
+    a{
+      color: #333;
+    }
+  }
+}
 .commodity-detail{
   .banner{
     position: relative;
@@ -367,6 +459,30 @@ a, .tap{
     }
   }
 }
+.evaluate-page{
+  padding: .3rem;
+  h2{
+    text-align: center;
+    font-size: .4rem;
+    line-height: .6rem;
+  }
+  .info{
+    .imgbg{
+      width: 1rem;
+      height: 1rem;
+    }
+    .content{
+      height: 1rem;
+      width: 5.6rem;
+      h5{
+        font-size: .28rem;
+      }
+      .star{
+
+      }
+    }
+  }
+}
 //后台管理系统
 .admin{
   .header{
@@ -416,6 +532,161 @@ a, .tap{
         text-align: center;
         line-height: .8rem;
         margin-right: 1rem;
+      }
+    }
+  }
+}
+.admin-home{
+  .search{
+    select{
+      width: 1.8rem;
+      height: .46rem;
+      line-height: .46rem;
+      background: #f5f5f5;
+      border: 1px solid #999;
+      border-radius: .06rem;
+    }
+    button{
+      width: 1rem;
+      line-height: .4rem;
+      border: none;
+      background: #ffc107;
+      border-radius: .08rem;
+    }
+  }
+  .list{
+    font-size: .26rem;
+    .show-detail{
+      padding: .2rem 0 .2rem .2rem;
+    }
+    span{
+      display: block;
+    }
+    .id{
+      width: .4rem;
+    }
+    h6{
+      width: 2.4rem;
+    }
+    .price{
+      width: 1.4rem;
+      color: #f00;
+    }
+    .store{
+      width: 1.5rem;
+    }
+    .operate{
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      button{
+        margin-left: .1rem;
+        width: 1rem;
+        line-height: .4rem;
+        border-radius: .3rem;
+        border: none;
+        background: #ffc107;
+      }
+      .cancel{
+        background: #f00;
+        color: #fff;
+      }
+    }
+  }
+  .load-more-info{
+    text-align: center;
+    line-height: .56rem;
+    margin-top: .2rem;
+    border-top: 1px solid #eee;
+  }
+  @keyframes orderUp{
+    0%{
+      bottom: -5rem;
+    }
+    100%{
+      bottom: 0;
+    }
+  }
+  .show-detail-box{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 7.5rem;
+    background: #fff;
+    height: 4.6rem;
+    overflow: auto;
+    animation: orderUp 0.3s;
+    p{
+      line-height: .6rem;
+      border-bottom: 1px solid #eee;
+      box-sizing: border-box;
+      text-align: center;
+    }
+    li{
+      height: .8rem;
+      padding: 0 .4rem;
+      border-bottom: 1px solid #eee;
+      box-sizing: border-box;
+      .imgbg{
+        width: .6rem;
+        height: .6rem;
+      }
+      h5{
+        width: 4rem;
+      }
+    }
+  }
+}
+.admin-commodity{
+  li{
+    margin-bottom: .2rem;
+  }
+  .img-cover{
+    width: 2rem;
+    height: 2rem;
+  }
+  .content{
+    width: 4.4rem;
+    height: 2rem;
+    h5{
+      font-size: .3rem;
+    }
+    h6{
+      font-size: .3rem;
+      color: #f00;
+    }
+    .describe{
+      span{
+        display: inline-block;
+        width: 2rem;
+      }
+    }
+    p{
+      color: #999;
+      height: .36rem;
+    }
+    .operate{
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      .btn{
+        display: block;
+        text-align: center;
+        line-height: .4rem;
+        margin-left: .1rem;
+        width: 1.2rem;
+        color: #fff;
+        font-size: .26rem;
+        border-radius: .4rem;
+        border: none;
+      }
+      .update{
+        background: #ffc107;
+      }
+      .delete{
+        background: #f00;
       }
     }
   }
