--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -451,6 +451,29 @@ a, .tap{
           font-size: .24rem;
           color: #999;
         }
+        .star{
+          width: 1.8rem;
+          height: .34rem;
+          background-image: url("../../../static/img/star.png");
+          background-size: cover;
+          background-position-x: 0;
+          background-position-y: 0;
+        }
+        .star1{
+          background-position-y: -1.43rem;
+        }
+        .star2{
+          background-position-y: -1.05rem;
+        }
+        .star3{
+          background-position-y: -0.7rem;
+        }
+        .star4{
+          background-position-y: -0.34rem;
+        }
+        .star5{
+          background-position-y: 0;
+        }
         p{
           font-size: .26rem;
           color: #666;
