--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -194,6 +194,7 @@ a, .tap{
     .meng-box{
       bottom: 1rem;
       top: auto;
+      width: 7.5rem;
       height: 5.6rem;
       background: #fff;
       h2{
