--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -35,3 +35,6 @@ table{border-collapse:collapse;border-spacing:0;}
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.mint-msgbox{
+  max-width: 6rem;
+}
