--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -914,3 +914,40 @@ a, .tap{
     }
   }
 }
+.admin-config{
+  h1{
+    text-align: center;
+    font-size: .4rem;
+    margin-bottom: .2rem;
+  }
+  ul{
+    padding: .2rem;
+    li{
+      margin-bottom: .2rem;
+      p{
+        font-size: .26rem;
+      }
+      input{
+        border: 1px solid #eee;
+        border-radius: .06rem;
+        width: 100%;
+        height: .6rem;
+        text-indent: .2rem;
+      }
+    }
+  }
+  .sub{
+    text-align: center;
+    padding: .3rem;
+    button{
+      width: 1.8rem;
+      height: .6rem;
+      background: #ff9e5b;
+      color: #fff;
+      font-weight: 500;
+      border-radius: .4rem;
+      font-size: .3rem;
+      border: none;
+    }
+  }
+}
