--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -99,7 +99,7 @@ a, .tap{
 .order{
   .banner{
     height: 2.3rem;
-    background-image: url("../../../static/img/order-banner.png");
+    background-image: url("http://qiniu.jnwtv.com/H520190202154627400210099.png");
     background-size: cover;
     h1{
       font-size: .6rem;
@@ -455,7 +455,7 @@ a, .tap{
         .star{
           width: 1.8rem;
           height: .34rem;
-          background-image: url("../../../static/img/star.png");
+          background-image: url("http://qiniu.jnwtv.com/H520190202154740730737678.png");
           background-size: cover;
           background-position-x: 0;
           background-position-y: 0;
@@ -515,7 +515,7 @@ a, .tap{
       .star{
         width: 3rem;
         height: .5rem;
-        background-image: url("../../../static/img/star.png");
+        background-image: url("http://qiniu.jnwtv.com/H520190202154740730737678.png");
         background-size: cover;
         background-position-x: 0;
         background-position-y: 0;
@@ -822,6 +822,30 @@ a, .tap{
         height: 2rem;
         line-height: .4rem;
         text-indent: .2rem;
+      }
+      #upload{
+        display: none;
+      }
+      .img-box{
+        display: flex;
+        align-items: center;
+        padding-top: .2rem;
+        label{
+          display: block;
+          width: 1.2rem;
+          height: 1.2rem;
+          text-align: center;
+          line-height: 1.2rem;
+          font-size: .8rem;
+          margin-right: .2rem;
+          border: 1px dashed #eee;
+          border-radius: .2rem;
+          color: #666;
+        }
+        .imgbg{
+          width: 1.2rem;
+          height: 1.2rem;
+        }
       }
     }
   }
